Much review of entire report by group

--- a/LaTeX/Projektrapport/Indledning/Indledning.tex
+++ b/LaTeX/Projektrapport/Indledning/Indledning.tex
@@ -1,7 +1,11 @@
 \chapter{Indledning}
-Dette 4. semester projekt omhandler et digitalt salgssystem. Emnet er valgt, da skolens fredagsbar manglede et kasseapparat, og projektet blev her tilgængeligt for 4. semester. Gruppen mente at det kunne være spændende at arbejde med et projekt, hvor der var en reel kunde tilknyttet. Gruppen blev imidlertid enige om at gå sin egen vej, da det gav frihed til at kunne indkorporere teori fra samtlige 4. semester fag og samtidigt sikrede at gruppen kunne udvikle et produkt, der var direkte udledt af egne idéer. \\
+Dette 4. semester projekt omhandler et digitalt salgssystem. Emnet blev valgt, da skolens fredagsbar manglede et kasseapparat, og projektet blev her tilgængeligt for 4. semester. Gruppen mente at det kunne være spændende at arbejde med et projekt, hvor der var en reel kunde tilknyttet. Da det blev besluttet at der ikke var nok frihed i projektet, valgte gruppen at bruge emnet, men på egne præmisser. Dette gav frihed til at kunne indkorporere teori fra samtlige 4. semester fag og samtidigt sikrede at gruppen kunne udvikle et produkt, der var direkte udledt af egne idéer.\\
 
-Det var et krav til projektet, at gruppen benyttede en iterativ process. Dette harmonerede godt med, at gruppen ønskede at ende ud med et fungerende produkt og derfor blev en beslutning taget om at første iteration skulle ende ud i et fungerende minimumssystem. \\
+Der er arbejdet ud fra en iterativ arbejdsprocess, mere specifikt efter Scrums principper.\\
 
-Til at forklare systemet er der udbygget en projektdokumentation, hvor der bruges 4+1 sammen med UML til at beskrive de grundlæggende elementer i systemet. Hvordan softwaren er designet og implementeret kan ligeledes læses i projektdokumentationen.
-Denne rapport vil derfor ikke give en fuldt uddybende beskrivelse af selve opbygningen af systemet, men fortælle om de tanker gruppen har gjort sig igennem forløbet.
+Til at forklare systemet er der udbygget en projektdokumentation, hvor der bruges 4+1 architectural view\footnote{Læs mere om 4+1 i afsnit \ref{section:metoder}, side \pageref{section:metoder}} sammen med UML til at beskrive de grundlæggende elementer i systemet. Hvordan softwaren er designet og implementeret kan ligeledes læses i projektdokumentationen.\\
+Denne rapport vil derfor ikke give en fuldt uddybende beskrivelse af selve opbygningen af systemet, men fortælle om de tanker gruppen har gjort sig igennem forløbet.\\
+
+\textbf{Læsevejledning}\\
+I afsnit 1 findes indledningen som giver en kort introduktion til projektet. I afsnit 2 findes en projektformulering, som formulerer den valgte opgave. I afsnit 3 findes en projektafgrænsing som afgrænser projektet. I afsnit 4 findes systembeskrivelsen, som beskriver det endelige system. I afsnit 5 findes krav, som beskriver de aktører og Use Cases der findes i systemet, og de krav der er sat.
+I afsnit 6 findes projektbeskrivelsen. Denne indeholder gennemførelse af projektet, hvilke udviklingsmetoder der brugt, design- og implementeringsovervejelser. I samme afsnit findes resultater og diskussion, beskrivelse af udviklingsværktøjer samt personlige opnåede erfaringer og fremtidigt arbejde.. Til sidst i afsnit 7 findes en konklusion, hvorefter rapporten afsluttes med en litteraturliste.
