--- a/LaTeX/Projektrapport/Krav/Aktorbeskrivelse.tex
+++ b/LaTeX/Projektrapport/Krav/Aktorbeskrivelse.tex
@@ -17,7 +17,7 @@ I det følgende afsnit kan der læses om de aktører, der er tilknyttet systemet
 		\hline
 		\textbf{Type} & Primær \\
 		\hline
-		\textbf{Beskrivelse} & Ekspedient er en primær bruger af systemet, som benytter systemet til at sælge og returnere vare. \\
+		\textbf{Beskrivelse} & Ekspedient er en primær bruger af systemet, som benytter systemet til at sælge og returnere varer. \\
 		\hline
 	\end{tabularx}
 	\captionsetup{justification=raggedright,singlelinecheck=false}
@@ -33,7 +33,7 @@ I det følgende afsnit kan der læses om de aktører, der er tilknyttet systemet
 		\hline
 		\textbf{Type} & Primær \\
 		\hline
-		\textbf{Beskrivelse} & Superbruger er en primær bruger af systemet, som benytter systemet til at oprette, nedlægge og redigere i systemets varekatalog. \\
+		\textbf{Beskrivelse} & Superbruger er en primær bruger af systemet, som benytter systemet til at oprette, slette og redigere i systemets varekatalog. \\
 		\hline
 	\end{tabularx}
 	\captionsetup{justification=raggedright,singlelinecheck=false}
@@ -49,7 +49,7 @@ I det følgende afsnit kan der læses om de aktører, der er tilknyttet systemet
 		\hline
 		\textbf{Type} & Sekundær \\
 		\hline
-		\textbf{Beskrivelse} & Kunden er en sekundær bruger af systemet, og ønsker at købe/returnere en eller flere varer igennem Ekspedienten. Ekspedienten er beskrevet i tabel \ref{EKS}.   \\
+		\textbf{Beskrivelse} & Kunden er en sekundær bruger af systemet, og ønsker at købe/returnere en eller flere varer igennem Ekspedient. Ekspedient er beskrevet i tabel \ref{tab:AktEks}.   \\
 		\hline
 	\end{tabularx}
 	\captionsetup{justification=raggedright,singlelinecheck=false}
