--- a/LaTeX/Projektrapport/Krav/UC/UC2.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC2.tex
@@ -1,2 +1,2 @@
 \subsubsection{Use Case 2 - Returner vare}
-Denne use case har til formål at returnere vare. Ekspedient indtaster varer til retur og trykker på knappen til returnering af varer. Herefter bliver der sendt informationer om returneringen til CentralServer.
+Denne Use Case har til formål at returnere varer. Ekspedient indtaster varer til retur og trykker på knappen til returnering af varer. Herefter bliver der sendt informationer om returneringen til CentralServer.
