--- a/LaTeX/Projektrapport/Krav/UC/UC4.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC4.tex
@@ -1,2 +1,2 @@
 \subsubsection{Use Case 4 - Rediger produkt}
-Denne use case har til formål at redigere et produkt i produktkataloget. Redigering af produkter foregår gennem Administrationssystemet. For at redigere et produkt vælger Superbruger et produkt i en produktkategori og trykker på knappen til redigering. Herefter åbner et nyt vindue med de nuværende informationer om produktet. Superbruger kan efterfølgende rette de relevante informationer. Når Superbruger er færdig med at redigere trykkes på knappen til at godkende og vinduet lukker igen. Der bliver sendt informationer om redigeringen til CentralServer og produktet opdateres.
+Denne Use Case har til formål at redigere et produkt i produktkataloget. Redigering af produkter foregår gennem Administrationssystem. For at redigere et produkt vælger Superbruger et produkt i en produktkategori og trykker på knappen til redigering. Herefter åbner et nyt vindue med de nuværende informationer om produktet. Superbruger kan efterfølgende rette de relevante informationer. Når Superbruger er færdig med at redigere trykkes på knappen til at godkende og vinduet lukker igen. Der bliver sendt informationer om redigeringen til CentralServer og produktet opdateres.
