--- a/LaTeX/Projektrapport/Krav/UC/UC7.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC7.tex
@@ -1,2 +1,2 @@
 \subsubsection{Use Case 7 - Rediger produktkategori}
-Denne use case har til formål at redigere navnet på en produktkategori i produktkataloget. For at udføre denne use case vælger Superbruger den ønskede produktkategori og trykker på knappen til redigering af produktkategori. Herefter præsenteres Superbruger med et vindue med oplysningerne på produktkategorien, hvori Superbruger retter navnet. Efter endt use case er produktkategorien redigeret i produktkataloget.
+Denne Use Case har til formål at redigere navnet på en produktkategori i produktkataloget. For at udføre denne use case vælger Superbruger den ønskede produktkategori og trykker på knappen til redigering af produktkategori. Herefter præsenteres Superbruger med et vindue med oplysningerne på produktkategorien, hvori Superbruger retter navnet. Efter endt use case er produktkategorien redigeret i produktkataloget.
