--- a/LaTeX/Projektrapport/Krav/UCbeskrivelse.tex
+++ b/LaTeX/Projektrapport/Krav/UCbeskrivelse.tex
@@ -1,6 +1,6 @@
 \section{Use Case beskrivelser}
 
-I det følgende afsnit kan der læses om de use cases der findes i systemet. Ønskes der yderligere specifikationer om disse usecases henvises der til dokumentationen, afsnit 1.5. \\
+I det følgende afsnit kan der læses om de Use Cases der er udarbejdet til systemet. Ønskes der yderligere specifikationer om disse usecases henvises der til dokumentationen, afsnit 1.5. \\
 
 \input{Krav/UC/UC1}
 \input{Krav/UC/UC2}
