--- a/LaTeX/Projektrapport/Projektafgransning/Projektafgransning.tex
+++ b/LaTeX/Projektrapport/Projektafgransning/Projektafgransning.tex
@@ -10,16 +10,17 @@ Fra projektoplægget er der krav om at projektet skal inddrage faglige aspekter 
 	\end{itemize}
 
 Fra skolens side er der ikke stillet konkrete krav til hvilke elementer systemet skal indeholde, dog skal projektet opfylde kursets læringsmål.\footnote{Læringsmål er nærmere beskrevet her: \url{http://kursuskatalog.au.dk/coursecatalog/Course/show/60934/}}\\
-Ud fra ovenstående er der valgt at lave et kassesystem bestående af tre delsystemer og ét delt bibliotek:
+Ud fra ovenstående er der valgt at lave et salgssystem bestående af tre delsystemer og ét delt bibliotek:
 \begin{itemize}
 	\item Kasseapperat
 	\item Administrationssystem
 	\item CentralServer
+	\item SharedLib
 \end{itemize}
 
-Samt det delte bibliotek SharedLib som muliggører en standardisering af datamodeller. Dette dækker over alle kurser på fjerde semester, med grafiske brugerflader, softwaretest og -design samt netværkskommunikation.
+SharedLib muliggører en standardisering af datamodeller. Dette dækker over alle kurser på fjerde semester, med grafiske brugerflader, software test, software design, netværkskommunikation og databaser.
 
 \subsubsection{Teknisk afgrænsning}
-Det er valgt ikke at implementere mulighed for dankortbetaling. For at muliggøre dankortbetaling skal der bruges en terminal og dens dertilhørende API\footnote{Application Programming Interface} skal benyttes.\\
- Der er desuden væsentlige krav fra både NETS og terminaludbyder som skal overholdes, hvilket gør opgaven meget omfattende. Det er i stedet besluttet af fokusere på at udvikle en funktionel prototype, kun med kontantbetaling.
+Det er valgt ikke at implementere mulighed for dankortbetaling. For at muliggøre dankortbetaling skal der bruges en terminal, og dens dertilhørende API\footnote{Application Programming Interface} skal benyttes.\\
+Der er desuden væsentlige krav fra både NETS og terminaludbyder som skal overholdes, hvilket gør opgaven meget omfattende. Det er i stedet besluttet af fokusere på at udvikle en funktionel prototype, kun med kontantbetaling.
 
