--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImple.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImple.tex
@@ -2,7 +2,7 @@
 
 \subsection{Indledning} 
 
-Da arbejdet med udviklingen af softwaren skulle blev der taget udgangspunkt i den opsatte domænemodel på figur \ref{fig:domain} side~\pageref{fig:domain}. Design og implementeringen af hver del vil blive beskrevet i afsnittene herunder.
+Da arbejdet med udviklingen af softwaren blev der taget udgangspunkt i den opsatte domænemodel på figur \ref{fig:domain} side~\pageref{fig:domain}. Design og implementeringen af hver del vil blive beskrevet i afsnittene herunder.
 
 \input{Projektbeskrivelse/DesignOgImplementering/SharedLib}
 \input{Projektbeskrivelse/DesignOgImplementering/Frontend}
