--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/Backend.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/Backend.tex
@@ -1,10 +1,10 @@
 \subsection{Administrationssystem}
-Dette delsystem indeholder al funktionalitet til at manipulere produkter og produktkategorier. Dette indebærer oprettelse, sletning og redigering af produkterne og produktkategorierne. Administrationsystem er koblet op til CentralServer, og kommunikerer med denne via en Socket forbindelse (TCP/IP).
+Dette delsystem indeholder al funktionalitet til at manipulere produkter og produktkategorier. Dette indebærer oprettelse, sletning og redigering af produkter og produktkategorier. Administrationsystem er koblet op til CentralServer, og kommunikerer med denne via en Socket forbindelse (TCP/IP~\cite{TCPIP}).
 
 \subsubsection{Designovervejelser}
-Designet af Administrationssystem startede ud med at lave en skitsering af, hvordan det grafiske skulle se ud. Dette betød at der skulle udvikles en grov skitse af designet\footnote{Skitse af designet kan ses i dokumentationen, side XYZ}.\\
-Selve softwaren til Administrationssystem skulle sættes op på en måde, så det var overskueligt og modulært. I software design kurset blev der givet undervisning i designprincippet MVVM~\cite{MVVM}, som forklarer, hvordan man kan dele sin GUI-applikation op og adskille funktionalitet fra præsentation. Præsentation er det rent visuelle, altså opsætning af knapper, tekstbokse og så fremdeles. Funktionaliteten er den bagvedliggende hjerne i applikationen.\\
-Administrationssystem softwaren var først lavet med funktionaliteten i codebehind\footnote{C\#-filen til XAML viewet (WPF)}, hvilket hurtigt blev både komplekst, rodet og ikke mindst skabte en høj kobling. Der blev da senere undervist i MVVM-designmønstret, hvorefter det blev besluttet at refaktorere til brug af MVVM designmønstret.\\\\
+Designet af Administrationssystem startede ud med at lave en skitsering af, hvordan det grafiske skulle se ud. Dette betød at der skulle udvikles en grov skitse af designet\footnote{Skitse af designet kan ses i dokumentationen, afsnit 3.3, figur 3.56}.\\
+Selve softwaren til Administrationssystem skulle sættes op på en måde, så det var overskueligt og modulært. I software design kurset blev der givet undervisning i designprincippet MVVM~\cite{MVVM}, som forklarer, hvordan man kan dele sin GUI-applikation op og adskille funktionalitet fra præsentation. Præsentation er det rent visuelle, altså opsætning af knapper, tekstbokse mm. Funktionaliteten er den bagvedliggende hjerne i applikationen.\\
+Softwaren for Administrationssystem var først lavet med funktionaliteten i codebehind\footnote{C\#-filen til XAML viewet (WPF)}, hvilket hurtigt blev både komplekst, rodet og ikke mindst skabte en høj kobling. Der blev da senere undervist i MVVM-designmønstret, hvorefter det blev besluttet at refaktorere til brug af MVVM designmønstret.\\\\
 
 Det visuelle design og funktionaliteten til at vise produkter og kategorier blev lavet i starten af udviklingen. Efter dette skulle kommunikationen mellem Administrationssystem og CentralServer på plads. Implementeringen af CentralServer satte en standard for, hvordan og hvornår data blev sendt frem og tilbage mellem CentralServer og de andre delsystemer, og derfor skulle der blot laves kommunikation for Administrationssystem der opfyldte disse krav. Det primære krav var, at Administrationssystem kontinuert skulle lytte på indkommende data, da der kunne blive sendt vigtig data på alle tidspunkter, også selvom den pågældende instans af Administrationssystem ikke havde anmodet CentralServer om noget.
 
@@ -14,7 +14,7 @@ Det endelige design af Administrationssystemet er implementeret med MVVM som det
 
 
 \subsubsection{Presentation layer}
-Administrationssystem fungerer sådan, at ved start af programmet åbnes et hovedvindue, der viser systemets nuværende produkter samt produktaktegorier. Herfra er der knapper til resten af programmets funktionalitet, som indebærer opret, rediger og slet af produkter og kategorier. Produkter og kategorier kan markeres på den pågældende liste og ved sletning eller redigering slettes/ændres der på det markerede element.\\
+Administrationssystem fungerer ved at et hovedvinduet åbnes, ved start af programmet. Dette vindue viser systemets nuværende produkter samt produktaktegorier. Herfra er der knapper til resten af programmets funktionalitet, som indebærer opret, rediger og slet af produkter og kategorier. Produkter og kategorier kan markeres på den pågældende liste og ved sletning eller redigering slettes/ændres der på det markerede element.\\
 
 \begin{figure}[H]
 	\centering
@@ -37,7 +37,7 @@ Figur \ref{fig:admindemo} viser det endelige design af Administrationssystemets 
 
 \subsubsection{Business logic layer}
 
-Administrationssystemet,s som er opbygget vha. MVVM design mønstret, benytter viewmodels til alle dets views. Det betyder at der for hver vindue, er en tilhørende viewmodel. Denne viewmodel indeholder datamodeller som viewet binder til, og fremviser dette. Fordelen er tydelig – der er lav kobling igennem det meste af systemet. Ulempen viser sig når der skal deles data: For at få data fra hovedvinduets viewmodel, som har alle produkter mv., til en sub-viewmodel (så som ”rediger produkt” vinduet), skal dataen flyttes ind i viewet og derefter ned i dets viewmodel. Det er ikke holdbart, det skaber høj kobling og gør hele systemet mere besværligt at vedligeholde.
+Administrationssystem er opbygget vha. MVVM designmønstret, og benytter viewmodels til alle dets views. Det betyder at der for hver vindue, er en tilhørende viewmodel. Denne viewmodel indeholder datamodeller som viewet binder til, og fremviser dette. Fordelen er tydelig – der er lav kobling igennem det meste af systemet. Ulempen viser sig når der skal deles data: For at få data fra hovedvinduets viewmodel, som har alle produkter mv., til en sub-viewmodel (så som ”rediger produkt” vinduet), skal dataen flyttes ind i viewet og derefter ned i dets viewmodel. Det er ikke holdbart, det skaber høj kobling og gør hele systemet mere besværligt at vedligeholde.
 Det problem er løst vha. events og PRISM EventAggregator~\cite{PRISM}.
 
 \begin{figure}[H]
@@ -63,6 +63,6 @@ Kommunikationen mellem Administrationssystem og CentralServer har to dele. Den f
 	\label{fig:adminsekvens}
 \end{figure}
 
-Figur \ref{fig:adminsekvens} viser et eksempel på, hvad der foregår, når brugeren eksempelvis opretter et nyt produkt. Brugeren foretager en handling i brugergrænsefladen og trykker gem, herefter laves en kommando, som laves til en XML-streng ved hjælp af SharedLib. Denne streng sendes til serveren. Serveren modtager og dekoder XML strengen, foretager handlinger på databasen og sender et svar tilbage i XML format.\\\\
+Figur \ref{fig:adminsekvens} viser et eksempel på, hvad der foregår, når brugeren eksempelvis opretter et nyt produkt. Brugeren foretager en handling i brugergrænsefladen og trykker gem, herefter laves en kommando, som laves til en XML-string ved hjælp af SharedLib. Denne streng sendes til serveren. Serveren modtager og dekoder XML strengen, foretager handlinger på databasen og sender et svar tilbage i XML format.\\\\
 Når Administrationssystem modtager data vil XML-strengen prøvet at blive dekodet. Hvis strengen indeholder en hel kommando vil der blive foretaget en handling ud fra denne kommando. Kommandoerne der modtages indeholder funktioner der fortæller om et produkt er oprettet, redigeret eller slettet og det samme for kategorier. Dette betyder, at uanset hvornår Administrationssystem modtager en kommando, så vil produkt- og kategorilister blive opdateret.\\
 Ved at bruge benytte denne måde at modtage data på, garanteres det, såfremt der er forbindelse fra Administrationssystem til CentralServer, at Administrationssystem altid vil være synkront med databasen - også selvom et andet Administrationssystem har oprettet et nyt produkt eller produktkategori.
