--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/CentralServer.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/CentralServer.tex
@@ -1,7 +1,7 @@
 \subsection{CentralServer}
 
 \textbf{Funktionalitet}\\
-Iht. afsnittet "Specifikation og analyse" er hovedfunktionaliteten i CentralServer en TCP/IP socket-server, hvor flere klienter kan forbinde til - og kommunikere med - asynkront. Derudover var det et krav, at CentralServer skulle håndtere alt interaktion med Database.\\
+Iht. afsnittet "Specifikation og analyse" er hovedfunktionaliteten i CentralServer en TCP/IP~\cite{TCPIP} socket-server, hvor flere klienter kan forbinde til - og kommunikere med - asynkront. Derudover var det et krav, at CentralServer skulle håndtere alt interaktion med Database.\\
 
 For at imødekomme kravene på fornuftig vis, implementere CentralServer følgende funktionalitet:
 
