--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/Frontend/DataAccess.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/Frontend/DataAccess.tex
@@ -1,5 +1,5 @@
 \subsubsection{Data Access Layer}
-Data Access Layer består af tre dele. Den første del består i at modtage produktoversigter fra CentralServer. Den anden del består i at sende information om gennemførte køb til CentralServer. Den tredje del består i at denne salgskvitteringer efter køb er blevet gennemført.
+Data Access Layer består af tre dele. Den første del består i at modtage en produktoversigt fra CentralServer. Den anden del består i at sende information om gennemførte køb til CentralServer. Den tredje del består i at denne salgskvitteringer efter køb er gennemført.
 
 \begin{figure}[H]
 	\centering
@@ -8,5 +8,5 @@ Data Access Layer består af tre dele. Den første del består i at modtage prod
 	\label{fig:KAtCS}
 \end{figure}
 
-Figur \ref{fig:KAtCS} viser et generelt eksempel på hvordan kommunikationen til CentralServer fungere. Ekspedienten gennemføre f.eks. et køb i brugergrænsefladen, herefter laves et kommando objekt, som encodes til en XML-streng ved hjælp af SharedLib. Denne XML streng sendes til CentralServer. Forventes et svar modtages dette i form af en XML string, denne decodes til kommando objekt, som inderholder informationen.\\
-Oprettelse af salgskvitteringer foregår ved at der oprettes en tekst fil, navngivet efter tidspunkt for købet.
+Figur \ref{fig:KAtCS} viser et generelt eksempel på hvordan kommunikationen til CentralServer fungerer. Ekspedient gennemfører f.eks. et køb i brugergrænsefladen, herefter laves et kommando objekt, som encodes til en XML-streng ved hjælp af SharedLib. Denne XML string sendes til CentralServer. Forventes et svar modtages dette i form af en XML string, denne decodes til et kommando objekt, som indeholder informationen.\\
+Oprettelse af salgskvitteringer foregår ved at der oprettes en tekstfil, navngivet efter tidspunkt for købet.
