--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/SharedLib.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/SharedLib.tex
@@ -1,5 +1,5 @@
 \subsection{SharedLib}
-Beslutningen om at lave et bibliotek opstod da det blev klart at en masse funktionalitet ville gå igen. Derfor blev det vedtaget at protokollen skulle eksisterer som ekstern funktionalitet i et bibliotek og dette blev senere udvidet til også at indeholde datamodeller.
+SharedLib er et delt bibliotek, indeholdende datamodeller, protokoller og en socket klient. Funktionalitet og design af SharedLib er beskrevet i de følgende underafsnit.
 
 \input{Projektbeskrivelse/DesignOgImplementering/SharedLib/Funktionalitet}
 \input{Projektbeskrivelse/DesignOgImplementering/SharedLib/Design}
