--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/SharedLib/Model.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/SharedLib/Model.tex
@@ -1,2 +1,2 @@
 \textbf{Models}\\
-Også omtalt som datamodeller indeholder blot attributter med relevant data og bliver brugt som domæneklasser.\\\\
+Også omtalt som datamodeller. Disse indeholder blot attributter med relevant data og bliver brugt som domæneklasser.\\\\
