--- a/LaTeX/Projektrapport/Projektbeskrivelse/Udviklingsvarktojer.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Udviklingsvarktojer.tex
@@ -32,4 +32,5 @@ DotCover har været benyttet som code coverage værktøj, for at skabe overblik 
 \textbf{Entity Framework}~\cite{EF}\\
 Entity Framework har været benyttet til oprettelse af og kommunikation med databasen i CentralServer. Entity Framework automatiserer meget, og gør det væsentligt nemmere at arbejde med databaser.
 
-
+\textbf{PivotalTracker}~\cite{Pivotal}\\
+PivotalTracker har været benyttet til Digitalt Scrumboard.
