--- a/LaTeX/Projektrapport/Projektformulering/Formulering.tex
+++ b/LaTeX/Projektrapport/Projektformulering/Formulering.tex
@@ -1,3 +1,5 @@
-Der er fremstillet et salgssystem til fysiske butikker. Systemet består af en central server, herefter benævnt som CentralServer, hvortil et eller flere kasseapparater er tilsluttet. Ekspedienter kan ekspedere kunder via kasseapparater, som kan tilgås via en grafisk brugerflade, eksempelvis en touch-skærm. En Superbruger kan derudover tilgå et Administrationssystem, der kører på CentralServer, hvor der er mulighed for at oprette, redigere og slette produkter og produktkategorier. Administrationssystemet kan tilgås via en vilkårlig computer med forbindelse til CentralServer\\
+Der fremstilles et salgssystem til fysiske butikker. Systemet består af en central server, hvortil et eller flere kasseapperater er tilsluttet. Ekspedienter kan ekspedere kunder via et kasseapperat, som kan tilgås via en skærm eller touch-skærm. Superbruger kan tilgå et administrationssystem igennem en vilkårlig maskine, som har adgang til internettet eller på lokalt netværk med den centrale server. Her er der mulighed for at oprette, redigere og slette produkter og produktgrupper.\\
 
-CentralServer indeholder en database, hvor produkter, produktkategorier mv, ligger gemt. Herfra henter Kasseapparaterne de nødvendige informationer såsom produktoplysninger. Kasseapparater informerer desuden CentralServer når et salg har fundet sted.
+Den centrale server indeholder en database, hvor produkter, produktgrupper mv. ligger gemt. Herfra henter kasseapperaterne de nødvendige informationer såsom produktoplysninger. Kasseapperater informerer desuden den centrale server når salg og andre relevante begivenheder finder sted.
+
+Herefter er delsystemerne benævnt som ordlisten beskriver på side \pageref{ordliste}.
