--- a/LaTeX/Projektrapport/Resume/Resume.tex
+++ b/LaTeX/Projektrapport/Resume/Resume.tex
@@ -1,5 +1,5 @@
 \section*{Resumé}
-Dette projekt er udviklet af seks studerende fra Ingeniørhøjskolen, Aarhus Universitet. Formålet er at lave et tværfagligt projekt, der dækker de fem udbudte kurser på IKT-studiets 4. semester. Det har samtidigt haft til formål at skabe praktisk erfaring med agil softwareudvikling, og dertilhørende test, versionsstyring mm.\\
+Dette projekt er udviklet af seks studerende fra Ingeniørhøjskolen, Aarhus Universitet. Formålet er at lave et tværfagligt projekt, der dækker de fem udbudte kurser på IKT-studiets 4. semester. Det har samtidigt haft til formål at skabe praktisk erfaring med agil softwareudvikling, og dertilhørende test og versionsstyring.\\
 
 I projektet er der udviklet en funktionel prototype af et digitalt salgssystem, hvor et eller flere kasseapparater kan forbindes. Derudover er der udviklet et administrationssystem, hvor superbrugere kan vedligeholde produktkataloget, samt en central server, hvor kasseapparater og administrationssystemer kan forbinde til. Kasseapparat og administrationssystem er udviklet med grafiske brugergrænseflader.\\
 
@@ -7,7 +7,7 @@ Igennem processen er der anvendt en iterativ udviklingsprocess i form af en afar
 
 
 \section*{Abstract}
-This project has been developed by six students from Aarhus School of Engineering, Aarhus University. The purpose is to create a interdisciplinary project that covers the five courses that has been offered at the 4th semester on the ICT-studies. More than that, this project has the purpose of giving practical experience within agile software development, including but not limited to tests, version control and so forth.\\
+This project has been developed by six students from Aarhus School of Engineering, Aarhus University. The purpose is to create a interdisciplinary project that covers the five courses that has been offered at the 4th semester on the ICT-studies. More than that, this project has the purpose of giving practical experience within agile software development, including testing and version control.\\
 
 The project has resulted in a functional prototype of a point-of-sale system, where one or more cash registers can be connected. In addition, an administration system has been developed, where superusers can maintain the product catalogue, as well as a central server, where both cash registers and administration systems can be connected to. Both the cash register and the administration system has been developed with a graphical user interface. \\
 
