--- a/LaTeX/Projektrapport/Krav/Krav.tex
+++ b/LaTeX/Projektrapport/Krav/Krav.tex
@@ -1,6 +1,6 @@
 \chapter{Krav}
-I det følgende afsnit er der beskrevet de use cases, der har været udarbejdet ifm. udviklingen af systemet. Use casene beskriver de anvendelsesmuligheder brugerne af systemet har som hhv. Superbruger og Ekspedient.\\
-Disse use cases bliver anvendt som kravsspecifikation for systemet, da de viser de reelle anvendelsesmuligheder. Ønskes yderligere specifikationer om disse use cases, henvises til dokumentationen, kapitel 1.
+I det følgende afsnit er der beskrevet de Use Cases, der har været udarbejdet ifm. udviklingen af systemet. Use Casene beskriver de anvendelsesmuligheder hver af de to typer af brugere har i systemet, hhv. Superbruger og Ekspedient.\\
+Disse Use Cases bliver anvendt som kravsspecifikation for systemet, da de viser de reelle anvendelsesmuligheder. Ønskes yderligere specifikationer om disse use cases, henvises til dokumentationen, afsnit 1 - Kravspecifikation.
 
 \input{Krav/Aktorbeskrivelse}
 \input{Krav/UCbeskrivelse}
