--- a/LaTeX/Projektrapport/Krav/UC/UC1.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC1.tex
@@ -1,3 +1,3 @@
 \subsubsection{Use Case 1 - Gennemfør salg}
-Denne use case har til formål at gennemføre et salg på Kasseapparat.
-Ekspedient indtaster de varer Kunde ønsker at købe. Når alle de pågældende varer er indtastede giver Kunde penge til Ekspedient, som indtaster det modtagne beløb og trykker på knappen til kontant betaling. Kasseapparatet vil derefter registrere købet og sende informationer om købet til CentralServer.
+Denne Use Case har til formål at gennemføre et salg på Kasseapparat.
+Ekspedient indtaster de varer Kunde ønsker at købe. Når alle de pågældende varer er indtastet giver Kunde penge til Ekspedient, som indtaster det modtagne beløb og trykker på knappen til kontant betaling. KasseApparat vil derefter registrere købet og sende informationer om købet til CentralServer.
