--- a/LaTeX/Projektrapport/Krav/UC/UC5.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC5.tex
@@ -1,2 +1,2 @@
 \subsubsection{Use Case 5 - Slet produkt}
-Denne use case har til formål at slette et produkt fra produktkataloget. Superbruger vælger det produkt, der ønskes at slettes og trykker på knappen til slet, hvorefter et vindue præsenteres for Superbruger, hvori der bekræftes. Alternativt kan Superbruger højreklikke på produktet og følge samme fremgangsmåde. Efter endt use case er produktet slettet fra produktkataloget.
+Denne Use Case har til formål at slette et produkt fra produktkataloget. Superbruger vælger det produkt, der ønskes slettet og trykker på knappen til at slette produkt. Herefter bliver et vindue præsenteret for Superbruger, hvori der bekræftes.
