--- a/LaTeX/Projektrapport/Projektbeskrivelse/Metoder.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Metoder.tex
@@ -1,19 +1,19 @@
-\section{Metoder}
+\section{Metoder} \label{section:metoder}
 
-\textbf{SysML}\\
-Der blev brugt SysML til at beskrive projektets use cases på en let og overskuelig måde. I forhold til de tidligere semestre, har vi ikke brugt SysML til at beskrive systemarkitekturen, men i stedet benyttet 4+1 architectural view.\\
+\textbf{SysML & UML}\\
+SysML og UML er brugt til at beskrive projektets Use Cases på en let og overskuelig måde, samt lave diagrammer til beskrivelse af systemet. Der er blandt andet lavet sekvensdiagrammer, klassediagrammer og pakkediagrammer.\\
 
-\textbf{Scrum-light}\\
-Til styring af arbejdsprocessen blev der benyttet en light version af Scrum. Dette viser sig igennem brug af iterativ udvikling ved brug af sprints med en længde på 2 til 3 uger. Til alle møder har vi benyttet os af en siddende version af stå op møder, hvor alle medlemmer kort har haft fortalt hvad de har lavet i den fortløbende uge samt hvad de havde tænkt sig at lave den kommende uge. Vi har også haft valgt en Scrum master. Hans arbejde har primært været at holde styr på Scrum boardet og sikre at folk fik holdt backlog items opdateret.\\
+\textbf{Scrum}\\
+Til styring af arbejdsprocessen blev der benyttet Scrum. Dette viser sig igennem brug af iterativ udvikling ved brug af sprints med en længde på 2 til 3 uger. Til alle møder har vi benyttet os af en siddende version af stå op møder, hvor alle medlemmer kort har haft fortalt hvad de har lavet i den fortløbende uge samt hvad de havde tænkt sig at lave den kommende uge. Vi har også haft valgt en Scrum master. Hans arbejde har primært været at holde styr på Scrum boardet og sikre at folk fik holdt backlog items opdateret.\\
 
 \textbf{4+1 Architectural View} \\
-Til at beskrive systemets software arkitektur blev der benyttet 4+1 arkitekture view. Dette var et krav til projektet da der var undervisning om emnet i Software Design. Gruppen forsøgte at holde brugen af 4+1 meget overordnet, og det blev derved kun brugt til at beskrive systemets overordnede systemarkitektur. \\
+Til at beskrive systemets software arkitektur blev der benyttet 4+1 architectural view. Dette var et krav fra projektvejlederen. Gruppen forsøgte at holde brugen af 4+1 meget overordnet, og det blev derved kun brugt til at beskrive systemets overordnede systemarkitektur. \\
 
 \textbf{Tidsplan} \\
 I starten af projektet blev der udarbejdet en tidsplan for hele forløbet. Denne tidsplan inkluderede fire udviklings-sprints samt et afsluttende sprint til dokumentation og rapport. Da vi har benyttet en agil udviklingsprocess har indholdet af de fire udviklings-sprints ikke været planlagt på forhånd, og indgår dermed ikke i tidsplanen. \\
 
 \textbf{Versionsstyring} \\
-Gruppen har brugt Git (via github.com) til versionsstyring af projektet. Dette har både omfattet kildekode, dokumentation og rapport. \\
+Gruppen har brugt Git til versionsstyring af projektet. Dette har både omfattet kildekode, dokumentation og rapport. Git projektet er hostet på Github\footnote{\url{https://github.com}}.\\
 
 \textbf{Continous Integration} \\
 Gruppen har brugt skolens Jenkins server, til løbende at køre unit- og integrationstests samt holde styr på Coverage ved tests. \\
