Now is building. teehee :poop: :speak_no_evil:

--- a/LaTeX/Projektrapport/Projektbeskrivelse/Metoder.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Metoder.tex
@@ -1,6 +1,6 @@
 \section{Metoder} \label{section:metoder}
 
-\textbf{SysML & UML}\\
+\textbf{SysML og UML}\\
 SysML og UML er brugt til at beskrive projektets Use Cases på en let og overskuelig måde, samt lave diagrammer til beskrivelse af systemet. Der er blandt andet lavet sekvensdiagrammer, klassediagrammer og pakkediagrammer.\\
 
 \textbf{Scrum}\\
